Fix font color for better readability

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,5 +7,5 @@ header {
   justify-content: flex-end;
   background-color: #7b8eab;
   background-image: url('http://www.transparenttextures.com/patterns/dark-mosaic.png');
-  color: #2C3F76;
+  color: #FFD700;
 }
